--- a/.env-example
+++ b/.env-example
@@ -7,11 +7,55 @@
 
 APPLICATION_PATH=./data
 
+### PHP config enviroment ########################################################################################################
+# Select a PHP config enviroment. development production
+
+PHP_CONFIG_ENV=production
+
 ### Docker compose files ###############################################################################################
 # Select which docker-compose files to include.
 # If using docker-sync. Set the value to: docker-compose.yml:docker-compose.dev.yml:docker-compose.sync.yml
 
 COMPOSE_FILE=docker-compose.yml
+
+### Docker Host IP #####################################################################################################
+# Enter your Docker Host IP (will be appended to /etc/hosts). Default is `10.0.50.1`
+
+DOCKER_HOST_IP=10.0.50.1
+
+### Remote Interpreter #################################################################################################
+# Choose a Remote Interpreter entry matching name. Default is `webserver`
+
+PHP_IDE_CONFIG=serverName=webserver
+
+########################################################################################################################
+
+###########################################################
+# Containers Customization
+###########################################################
+
+### PHP_FPM ############################################################################################################
+
+PHP_FPM_INSTALL_BCMATH=false
+PHP_FPM_INSTALL_EXIF=false
+PHP_FPM_INSTALL_GD=false
+PHP_FPM_INSTALL_IMAGEMAGICK=false
+PHP_FPM_INSTALL_INTL=false
+PHP_FPM_INSTALL_LDAP=false
+PHP_FPM_INSTALL_MEMCACHED=false
+PHP_FPM_INSTALL_MONGO=false
+PHP_FPM_INSTALL_MYSQLI=false
+PHP_FPM_INSTALL_OPCACHE=false
+PHP_FPM_INSTALL_OPENSSL=false
+PHP_FPM_INSTALL_PDO_MYSQL=false
+PHP_FPM_INSTALL_PDO_PGSQL=false
+PHP_FPM_INSTALL_PDO_SQLITE=false
+PHP_FPM_INSTALL_POSIX=false
+PHP_FPM_INSTALL_REDIS=false
+PHP_FPM_INSTALL_SOAP=false
+PHP_FPM_INSTALL_TOKENIZER=false
+PHP_FPM_INSTALL_XDEBUG=false
+PHP_FPM_INSTALL_ZIP_ARCHIVE=false
 
 ### NGINX ##############################################################################################################
 
