--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,44 @@
 version: '3'
 services:
 
+### PHP-FPM Container #######################################
+
+  php-fpm:
+    build:
+      context: ./php-fpm
+      args:
+        - PHP_CONFIG_ENV=${PHP_CONFIG_ENV}
+        - INSTALL_BCMATH=${PHP_FPM_INSTALL_BCMATH}
+        - INSTALL_EXIF=${PHP_FPM_INSTALL_EXIF}
+        - INSTALL_GD=${PHP_FPM_INSTALL_GD}
+        - INSTALL_IMAGEMAGICK=${PHP_FPM_INSTALL_IMAGEMAGICK}
+        - INSTALL_INTL=${PHP_FPM_INSTALL_INTL}
+        - INSTALL_LDAP=${PHP_FPM_INSTALL_LDAP}
+        - INSTALL_MEMCACHED=${PHP_FPM_INSTALL_MEMCACHED}
+        - INSTALL_MONGO=${PHP_FPM_INSTALL_MONGO}
+        - INSTALL_MYSQLI=${PHP_FPM_INSTALL_MYSQLI}
+        - INSTALL_OPCACHE=${PHP_FPM_INSTALL_OPCACHE}
+        - INSTALL_OPENSSL=${PHP_FPM_INSTALL_OPENSSL}
+        - INSTALL_PDO_MYSQL=${PHP_FPM_INSTALL_PDO_MYSQL}
+        - INSTALL_PDO_PGSQL=${PHP_FPM_INSTALL_PDO_PGSQL}
+        - INSTALL_PDO_SQLITE=${PHP_FPM_INSTALL_PDO_SQLITE}
+        - INSTALL_POSIX=${PHP_FPM_INSTALL_POSIX}
+        - INSTALL_REDIS=${PHP_FPM_INSTALL_REDIS}
+        - INSTALL_SOAP=${PHP_FPM_INSTALL_SOAP}
+        - INSTALL_TOKENIZER=${PHP_FPM_INSTALL_TOKENIZER}
+        - INSTALL_XDEBUG=${PHP_FPM_INSTALL_XDEBUG}
+        - INSTALL_ZIP_ARCHIVE=${PHP_FPM_INSTALL_ZIP_ARCHIVE}
+    volumes:
+      - ${APPLICATION_PATH}:/var/www
+    expose:
+      - "9000"
+    extra_hosts:
+      - "dockerhost:${DOCKER_HOST_IP}"
+    environment:
+      - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
+    networks:
+      - backend
+
 ### NGINX Server Container ##################################
 
   nginx:
@@ -19,6 +57,8 @@ services:
     networks:
       - frontend
       - backend
+
+### Networks Setup ############################################
 
 networks:
   frontend:
