--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,17 +1,40 @@
+#
+#--------------------------------------------------------------------------
+# Image Setup
+#--------------------------------------------------------------------------
+#
+
 FROM nginx:alpine
 
-COPY nginx.conf /etc/nginx/nginx.conf
+#
+#--------------------------------------------------------------------------
+# Software's Installation
+#--------------------------------------------------------------------------
+#
 
-RUN apk update \
+RUN set -e \
+    && apk update \
     && apk upgrade \
-    && apk add --no-cache bash \
-    && adduser -D -H -u 1000 -s /bin/bash www
+    && apk add --no-cache \
+		ca-certificates \
+        bash \
+    && addgroup -g 1000 www \
+    && adduser -D -H -u 1000 -s /bin/bash -G www www 
+
+#
+#--------------------------------------------------------------------------
+# Final Touch
+#--------------------------------------------------------------------------
+#
 
 ARG PHP_UPSTREAM_CONTAINER=php-fpm
 ARG PHP_UPSTREAM_PORT=9000
 
 # Set upstream conf and remove the default conf
-RUN echo "upstream php-upstream { server ${PHP_UPSTREAM_CONTAINER}:${PHP_UPSTREAM_PORT}; }" > /etc/nginx/conf.d/upstream.conf \
-    && rm /etc/nginx/conf.d/default.conf
+RUN set -e \
+    && rm -f /etc/nginx/conf.d/default.conf \
+    && echo "upstream php-upstream { server ${PHP_UPSTREAM_CONTAINER}:${PHP_UPSTREAM_PORT}; }" > /etc/nginx/conf.d/upstream.conf
+
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80 443
